--- a/index.html
+++ b/index.html
@@ -110,11 +110,13 @@
         <input type="number" id="time" placeholder="Brew Time (s)">
         <select id="behavior">
             <option value="">Select Behavior</option>
-            <option value="Steady">Steady Flow</option>
-            <option value="Fast">Fast Flow</option>
-            <option value="Slow">Slow / Dripping</option>
+            <option value="Very fast">Very fast</option>
+            <option value="Medium Fast">Medium Fast</option>
+            <option value="Steady Flow (Ideal)">Steady Flow (Ideal)</option>
+            <option value="Slow Drip">Slow Drip</option>
+            <option value="Restricted">Restricted</option>
+            <option value="Not Dripping">Not Dripping</option>
             <option value="Channeling">Channeling</option>
-            <option value="Choking">Choking</option>
         </select>
         <select id="sensory">
             <option value="">Select Sensory Note</option>
